--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+/** @format */
+*{
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  background-color: black;
+  margin: 0;
+  padding: 0;
   color: white;
 }
+.menu {
+  background-color: #ffff;
+  margin-top: -20px;
+  width: 100vw;
+  display: flex;
 
-.App-link {
-  color: #61dafb;
+  
+}
+.link {
+  color: black;
+  border-right: 2px solid black;
+  /* padding: 40px 67px; */
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 14%;
+  height: 15vh;
+text-align: center;
+text-decoration: none;
+
+
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
